fix: scrollbar styles

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,9 @@ body {
   background-repeat: repeat-y;
   background-position: center;
   background-size: 100%;
+  scrollbar-gutter: stable;
+  overflow-x: hidden;
+
   /* @media only screen and (max-width: 600px) {
     background-size: 100%;
   } */
